Improve-manual Added translations, fixed title container bottom visible

--- a/src/pages/Manual/classes.module.scss
+++ b/src/pages/Manual/classes.module.scss
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   width: 230px;
-  height: 100vh;
+  height: 80vh;
   overflow-x: hidden;
   overflow-y: scroll;
   position: fixed;
